tdf#90214 Change Fallback Color for Ruler Numbers

DarkShadowColor was being used which was fine for light themes
but did not work for darker themes as a default color. Changed to
Gray instead of Black by using DeactiveColor.

Change-Id: I8c40b432bbef00e325022efd67d1887828ea87cb